# sketchup-cpp-api

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  clang-format.txt  ruby-c-extension-examples.cmake
.github/workflows/: build.yaml
build_utils/scripts/: CMakeLists.txt  build_mac.sh  build_win.bat  format_files.sh  generate_dummy_class.cpp  parse_ruby_doc.cpp
cpp/: utils.hpp
cpp/utils/: empty_class.hpp  string_literal.hpp  variadic_bind.hpp
examples/: CMakeLists.txt  any_of_example.cpp  entities_observer_example.cpp  playground.cpp  ruby_hash_example.cpp
hostapp/: definition_list.cc  definition_list.hpp  dummy_objects.hpp  entities.cc  entities.hpp  entity.cc  entity.hpp  export_options.hpp  factory.hpp  geom.hpp  implemented_objects.hpp  macros.hpp  material.cc  material.hpp  materials.cc  materials.hpp  model.cc  model.hpp  sketchup.cc  sketchup.hpp
hostapp/observers/: definitions_observer.hpp  entities_observer.hpp  entity_observer.hpp  macros.hpp  makable_interface.hpp  materials_observer.hpp  model_observer.hpp
ruby/: utils.cc  utils.hpp
ruby/utils/: any_of.hpp  enumerable.cc  enumerable.hpp  fundamental_types.cc  fundamental_types.hpp  hash.hpp  object.cc  object.hpp  optional.cc  optional.hpp  rescue.hpp  ruby_class.cc  ruby_class.hpp  special_std_wrapper.hpp  tuple.cc  tuple.hpp  type_of.hpp
tests/: CMakeLists.txt  GenericSetup.hpp  TC_TestMaterial.rb  TC_TestObject.rb  TC_TestOptional.rb  TC_TestRubyClass.rb  TestMaterial.cpp  TestObject.cpp  TestOptional.cpp  TestRubyClass.cpp
tests/moka/src/: test.h
